src/objects/Oblix_User_Permission__c.object
<CustomObject>
    <description>Holds information of Unilever and Agency users permission levels for brands, which define read/write access to SWOP records, and defines who can approve SWOP records.</description>
    <fields>
        <fullName>Agency_ID__c</fullName>
        <formula>CASESAFEID( User_id__r.Contact.AccountId )</formula>
        <label>Agency ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>User_id__r.Contact.Account.Name</formula>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>CategoryBrand_id__r.brand_id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryBrand_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a valid category-brand combination for which this user has the permissions specified</description>
        <label>CategoryBrand</label>
        <referenceTo>MDO_CategoryBrands__c</referenceTo>
        <relationshipLabel>SWOP User Permission</relationshipLabel>
        <relationshipName>SWOP_User_Permission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Name__c</fullName>
        <formula>CategoryBrand_id__r.product_Category_Id__r.Name</formula>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Access__c</fullName>
        <label>Level of Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access &amp; Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superuser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <formula>User_id__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SWOP_User_Permission</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SWOP User Permission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>Category_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>User_id__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Level_of_Access__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>CategoryBrand_id__c</columns>
        <columns>Category_Name__c</columns>
        <columns>User_id__c</columns>
        <columns>User_Email__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Level_of_Access__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOP User Permission</pluralLabel>
    <recordTypes>
        <fullName>Oblix_Agency_User</fullName>
        <active>true</active>
        <label>Agency User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oblix_Unilever_User</fullName>
        <active>true</active>
        <label>Unilever User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>